--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script src="./node_modules/tw-elements/dist/css/index.min.css"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
   <title>Vite App</title>
 </head>
 
@@ -213,8 +212,7 @@
         sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
       </div>
 
-      <div
-        class="2xl:ml-60 font-head mt-8 border-2 border-[#D0D0A7] text-center 2xl:w-40 hover:bg-[#D0D0A7] hover:text-white">
+      <div class="2xl:ml-60 font-head mt-8 border-2 border-[#D0D0A7] text-center 2xl:w-40 hover:bg-[#D0D0A7] hover:text-white">
         GO TO THE BLOG
       </div>
     </div>
@@ -296,30 +294,24 @@
   </div>
 
 
-  <ul class="mb-5 flex list-none flex-col flex-wrap border-b-0 pl-0 md:flex-row pt-16 mx-40" role="tablist"
-    data-te-nav-ref>
+  <ul class="mb-5 flex list-none flex-col flex-wrap border-b-0 pl-0 md:flex-row pt-16 mx-40" role="tablist" data-te-nav-ref>
     <li role="presentation">
-      <a href="#tabs-home"
-        class="my-2 block  px-7 pt-4 pb-3.5 text-3xl font-head font-medium uppercase leading-tight text-black"
-        data-te-toggle="pill" data-te-target="#tabs-home" data-te-nav-active role="tab" aria-controls="tabs-home"
-        aria-selected="true">Lifestyle </a>
+      <a href="#tabs-home" class="my-2 block  px-7 pt-4 pb-3.5 text-3xl font-head font-medium uppercase leading-tight text-black"
+        data-te-toggle="pill" data-te-target="#tabs-home" data-te-nav-active role="tab" aria-controls="tabs-home" aria-selected="true">Lifestyle </a>
     </li>
     <li role="presentation">
       <a href="#tabs-profile"
         class="focus:border-transparen my-2 block px-7 pt-4 pb-3.5 text-3xl font-head font-medium uppercase leading-tight text-black"
-        data-te-toggle="pill" data-te-target="#tabs-profile" role="tab" aria-controls="tabs-profile"
-        aria-selected="false">Travel</a>
+        data-te-toggle="pill" data-te-target="#tabs-profile" role="tab" aria-controls="tabs-profile" aria-selected="false">Travel</a>
     </li>
     <li role="presentation">
       <a href="#tabs-messages"
         class="my-2 block border-x-0 border-t-0 border-b-2 border-transparent px-7 pt-4 pb-3.5 text-3xl font-head font-medium uppercase leading-tight text-black hover:isolate hover:border-transparent focus:isolate focus:border-transparent  dark:text-neutral-400 dark:hover:bg-transparent dark:data-[te-nav-active]:border-primary-400 dark:data-[te-nav-active]:text-primary-400"
-        data-te-toggle="pill" data-te-target="#tabs-messages" role="tab" aria-controls="tabs-messages"
-        aria-selected="false">Photos</a>
+        data-te-toggle="pill" data-te-target="#tabs-messages" role="tab" aria-controls="tabs-messages" aria-selected="false">Photos</a>
     </li>
   </ul>
   <div class="mb-6 pb-16 mx-40">
-    <div
-      class="hidden opacity-100 transition-opacity duration-150 ease-linear data-[te-tab-active]:block p-2 border-2 border-[#0B8497]"
+    <div class="hidden opacity-100 transition-opacity duration-150 ease-linear data-[te-tab-active]:block p-2 border-2 border-[#0B8497]"
       id="tabs-home" role="tabpanel" aria-labelledby="tabs-home-tab" data-te-tab-active>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar
       dapibus leo.Lorem ipsum dolor
@@ -329,8 +321,7 @@
       sit amet, consectetur
       adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, Pulvinar dapibus leo.
     </div>
-    <div
-      class="hidden opacity-100 transition-opacity duration-150 ease-linear data-[te-tab-active]:block border-2 border-[#808013] p-2"
+    <div class="hidden opacity-100 transition-opacity duration-150 ease-linear data-[te-tab-active]:block border-2 border-[#808013] p-2"
       id="tabs-profile" role="tabpanel" aria-labelledby="tabs-profile-tab">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar
       dapibus leo.Lorem ipsum dolor
@@ -340,8 +331,7 @@
       sit amet, consectetur
       adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, Pulvinar dapibus leo.
     </div>
-    <div
-      class="hidden opacity-100 transition-opacity duration-150 ease-linear data-[te-tab-active]:block p-2 border-2 border-[#F8A488]"
+    <div class="hidden opacity-100 transition-opacity duration-150 ease-linear data-[te-tab-active]:block p-2 border-2 border-[#F8A488]"
       id="tabs-messages" role="tabpanel" aria-labelledby="tabs-profile-tab">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar
       dapibus leo.Lorem ipsum dolor
@@ -492,8 +482,7 @@
             blocks
             but we will over come...
           </div>
-          <div
-            class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head text-center">
+          <div class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head text-center">
             Read More</div>
         </div>
       </div>
@@ -522,8 +511,7 @@
             blocks
             but we will over come...
           </div>
-          <div
-            class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head text-center">
+          <div class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head text-center">
             Read More</div>
         </div>
       </div>
@@ -552,8 +540,7 @@
             blocks
             but we will over come...
           </div>
-          <div
-            class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head text-center">
+          <div class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head text-center">
             Read More</div>
         </div>
       </div>
@@ -569,7 +556,8 @@
       Contact Us
     </div>
 
-    <div class="ml-32">
+
+    <div class="xl:ml-32 xl:col-span-1 col-span-2">
       <div>
         <input type="text" placeholder="First Name"
           class="placeholder-black font-head text-2xl placeholder:bg-transparent border-2 border-[#04282D4D] my-2 h-14 w-full p-4 bg-transparent">
@@ -587,8 +575,7 @@
 
       <div>
         <label for="textarea" class="text-2xl font-head">Comments</label>
-        <textarea type="textarea"
-          class="placeholder-transparent::placeholder w-full h-20 border-2 border-[#04282D4D] bg-transparent"></textarea>
+        <textarea type="textarea" class="placeholder-transparent::placeholder w-full h-20 border-2 border-[#04282D4D] bg-transparent"></textarea>
       </div>
 
       <div class="my-4 text-3xl font-head border-2 border-[#04282D4D] p-2 w-32 text-center">
@@ -617,87 +604,80 @@
     </div>
   </div>
 
-  <div>
-    <div class="my-16 text-center text-4xl font-head">
-      FAQ
-    </div>
+    <div>
+      <div class="my-16 text-center text-4xl font-head">
+        FAQ
+      </div>
 
-    <div class="mx-44 mb-44">
-      <div id="accordionExample">
-        <div class="rounded-t-lg border border-neutral-200 bg-white dark:border-neutral-600 dark:bg-neutral-800 my-2">
-          <h2 class="mb-0" id="headingOne">
-            <button
-              class="group relative flex w-full items-center rounded-t-[15px] border-0 py-4 px-5 text-left text-base bg-transparent"
-              type="button" data-te-collapse-init data-te-target="#collapseOne" aria-expanded="true"
-              aria-controls="collapseOne">
-              Lorem ipsum dolor sit amet
-              <span
-                class="ml-auto h-5 w-5 shrink-0 rotate-[-180deg] fill-[#336dec] transition-transform duration-200 ease-in-out group-[[data-te-collapse-collapsed]]:rotate-0 group-[[data-te-collapse-collapsed]]:fill-[#212529] motion-reduce:transition-none dark:fill-blue-300 dark:group-[[data-te-collapse-collapsed]]:fill-white">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                  stroke="currentColor" class="h-6 w-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-                </svg>
-              </span>
-            </button>
-          </h2>
-          <div id="collapseOne" class="!visible" data-te-collapse-item data-te-collapse-show
-            aria-labelledby="headingOne" data-te-parent="#accordionExample">
-            <div class="py-4 px-5">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      <div class="mx-44 mb-44">
+        <div id="accordionExample">
+          <div class="rounded-t-lg border border-neutral-200 bg-white dark:border-neutral-600 dark:bg-neutral-800 my-2">
+            <h2 class="mb-0" id="headingOne">
+              <button class="group relative flex w-full items-center rounded-t-[15px] border-0 py-4 px-5 text-left text-base bg-transparent"
+                type="button" data-te-collapse-init data-te-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Lorem ipsum dolor sit amet
+                <span
+                  class="ml-auto h-5 w-5 shrink-0 rotate-[-180deg] fill-[#336dec] transition-transform duration-200 ease-in-out group-[[data-te-collapse-collapsed]]:rotate-0 group-[[data-te-collapse-collapsed]]:fill-[#212529] motion-reduce:transition-none dark:fill-blue-300 dark:group-[[data-te-collapse-collapsed]]:fill-white">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                  </svg>
+                </span>
+              </button>
+            </h2>
+            <div id="collapseOne" class="!visible" data-te-collapse-item data-te-collapse-show aria-labelledby="headingOne"
+              data-te-parent="#accordionExample">
+              <div class="py-4 px-5">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit
+                amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </div>
             </div>
           </div>
-        </div>
-        <div class="border border-t-0 border-neutral-200 bg-white dark:border-neutral-600 dark:bg-neutral-800 my-2">
-          <h2 class="mb-0" id="headingTwo">
-            <button
-              class="group relative flex w-full items-center rounded-t-[15px] border-0 py-4 px-5 text-left text-base bg-transparent"
-              type="button" data-te-collapse-init data-te-collapse-collapsed data-te-target="#collapseTwo"
-              aria-expanded="false" aria-controls="collapseTwo">
-              Lorem ipsum dolor sit amet
-              <span
-                class="ml-auto -mr-1 h-5 w-5 shrink-0 rotate-[-180deg] fill-[#336dec] transition-transform duration-200 ease-in-out group-[[data-te-collapse-collapsed]]:mr-0 group-[[data-te-collapse-collapsed]]:rotate-0 group-[[data-te-collapse-collapsed]]:fill-[#212529] motion-reduce:transition-none dark:fill-blue-300 dark:group-[[data-te-collapse-collapsed]]:fill-white">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                  stroke="currentColor" class="h-6 w-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-                </svg>
-              </span>
-            </button>
-          </h2>
-          <div id="collapseTwo" class="!visible hidden" data-te-collapse-item aria-labelledby="headingTwo"
-            data-te-parent="#accordionExample">
-            <div class="py-4 px-5">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          <div class="border border-t-0 border-neutral-200 bg-white dark:border-neutral-600 dark:bg-neutral-800 my-2">
+            <h2 class="mb-0" id="headingTwo">
+              <button class="group relative flex w-full items-center rounded-t-[15px] border-0 py-4 px-5 text-left text-base bg-transparent"
+                type="button" data-te-collapse-init data-te-collapse-collapsed data-te-target="#collapseTwo" aria-expanded="false"
+                aria-controls="collapseTwo">
+                Lorem ipsum dolor sit amet
+                <span
+                  class="ml-auto -mr-1 h-5 w-5 shrink-0 rotate-[-180deg] fill-[#336dec] transition-transform duration-200 ease-in-out group-[[data-te-collapse-collapsed]]:mr-0 group-[[data-te-collapse-collapsed]]:rotate-0 group-[[data-te-collapse-collapsed]]:fill-[#212529] motion-reduce:transition-none dark:fill-blue-300 dark:group-[[data-te-collapse-collapsed]]:fill-white">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                  </svg>
+                </span>
+              </button>
+            </h2>
+            <div id="collapseTwo" class="!visible hidden" data-te-collapse-item aria-labelledby="headingTwo" data-te-parent="#accordionExample">
+              <div class="py-4 px-5">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit
+                amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </div>
             </div>
           </div>
-        </div>
-        <div
-          class="rounded-b-lg border border-t-0 border-neutral-200 bg-white dark:border-neutral-600 dark:bg-neutral-800">
-          <h2 class="accordion-header mb-0" id="headingThree">
-            <button
-              class="group relative flex w-full items-center rounded-t-[15px] border-0 py-4 px-5 text-left text-base bg-transparent"
-              type="button" data-te-collapse-init data-te-collapse-collapsed data-te-target="#collapseThree"
-              aria-expanded="false" aria-controls="collapseThree">
-              Lorem ipsum dolor sit amet
-              <span
-                class="ml-auto -mr-1 h-5 w-5 shrink-0 rotate-[-180deg] fill-[#336dec] transition-transform duration-200 ease-in-out group-[[data-te-collapse-collapsed]]:mr-0 group-[[data-te-collapse-collapsed]]:rotate-0 group-[[data-te-collapse-collapsed]]:fill-[#212529] motion-reduce:transition-none dark:fill-blue-300 dark:group-[[data-te-collapse-collapsed]]:fill-white">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                  stroke="currentColor" class="h-6 w-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-                </svg>
-              </span>
-            </button>
-          </h2>
-          <div id="collapseThree" class="!visible hidden" data-te-collapse-item aria-labelledby="headingThree"
-            data-te-parent="#accordionExample">
-            <div class="py-4 px-5">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          <div class="rounded-b-lg border border-t-0 border-neutral-200 bg-white dark:border-neutral-600 dark:bg-neutral-800">
+            <h2 class="accordion-header mb-0" id="headingThree">
+              <button class="group relative flex w-full items-center rounded-t-[15px] border-0 py-4 px-5 text-left text-base bg-transparent"
+                type="button" data-te-collapse-init data-te-collapse-collapsed data-te-target="#collapseThree" aria-expanded="false"
+                aria-controls="collapseThree">
+                Lorem ipsum dolor sit amet
+                <span
+                  class="ml-auto -mr-1 h-5 w-5 shrink-0 rotate-[-180deg] fill-[#336dec] transition-transform duration-200 ease-in-out group-[[data-te-collapse-collapsed]]:mr-0 group-[[data-te-collapse-collapsed]]:rotate-0 group-[[data-te-collapse-collapsed]]:fill-[#212529] motion-reduce:transition-none dark:fill-blue-300 dark:group-[[data-te-collapse-collapsed]]:fill-white">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                  </svg>
+                </span>
+              </button>
+            </h2>
+            <div id="collapseThree" class="!visible hidden" data-te-collapse-item aria-labelledby="headingThree" data-te-parent="#accordionExample">
+              <div class="py-4 px-5">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit
+                amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
 </body>
 
 </html>
